# YuckBeat

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
Source/: YuckBeatBuildConfig.h.in  YuckBeatController.cpp  YuckBeatController.h  YuckBeatEditor.cpp  YuckBeatEditor.h  YuckBeatEngine.cpp  YuckBeatEngineAPI.h  YuckBeatEngineLoader.cpp  YuckBeatEngineLoader.h  YuckBeatFactory.cpp  YuckBeatFractalRenderer.cpp  YuckBeatFractalRenderer.h  YuckBeatIDs.h  YuckBeatProcessor.cpp  YuckBeatProcessor.h  YuckBeatVisual.cpp  YuckBeatVisualAPI.h  YuckBeatVisualLoader.cpp  YuckBeatVisualLoader.h
cmake/: copy_plugin_package.cmake  llvm-mingw-x86_64.cmake
docker/: Dockerfile
scripts/: build-linux.sh  build-macos.sh  build-windows.sh
tools/: smoke_hot_reload_engine.cpp  smoke_hot_reload_visual.cpp  smoke_load_vst3.cpp
